# diman

./: Cargo.toml  rust-toolchain.toml
crates/diman_lib/: Cargo.toml
crates/diman_lib/src/: lib.rs  macros.rs  magnitude.rs
crates/diman_unit_system/: Cargo.toml
crates/diman_unit_system/src/codegen/: float_methods.rs  storage_types.rs
crates/diman_unit_system/src/parse/: attributes.rs
tests/float/: mod.rs
tests/glam/: mod.rs
tests/mpi/: mod.rs
tests/rand/: mod.rs
tests/rational_dimensions/: mod.rs
tests/serde/: mod.rs
tests/type_aliases/: mod.rs
tests/unit_aliases/: mod.rs
tests/utils/: mod.rs
