[package]
name = "diman_unit_system"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "Internal procedural macros for diman."
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[features]
glam = []
glam-vec2 = []
glam-dvec2 = []
glam-vec3 = []
glam-dvec3 = []
f32 = []
f64 = []
mpi = []
serde = []
rand = []
hdf5 = []
rational-dimensions = []
num-traits-libm = ["diman_lib/num-traits-libm"]
std = ["diman_lib/std"]
fastnum-d64   = ["dep:fastnum", "diman_lib/fastnum-d64"]
fastnum-d128  =  ["dep:fastnum", "diman_lib/fastnum-d128"]
fastnum-d256  =  ["dep:fastnum", "diman_lib/fastnum-d256"]
fastnum-d512  =  ["dep:fastnum", "diman_lib/fastnum-d512"]
fastnum-d1024 =  ["dep:fastnum", "diman_lib/fastnum-d1024"]

default = ["f32", "f64"]


[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
diman_lib = { path = "../diman_lib", version = "0.5.1"  }
fastnum = { version = "0.7", default-features = false, optional = true }

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
num-traits = { version = "0.2.17", default-features = false }
